--- a/Music.html
+++ b/Music.html
@@ -52,9 +52,9 @@
     <div class="row">
       <div class="twelve columns fade" style="margin-top: 5%">
         <center>
-          <a  href= "ML.html"><img style="margin-bottom:0%" class="dimmed" src="images/tree1.png" alt="icon" width="20%"></a>
-          <a  href= "Music.html"><img style="margin-bottom:3%" src="images/tree2.png" alt="icon" width="20%"></a>
-          <a  href= "other.html"><img style="margin-bottom:6%" class="dimmed" src="images/tree3.png" alt="icon" width="20%";></a>
+          <a  href= "ML.html"><img style="margin-bottom:0%" class="dimmed" src="images/tree1s.png" alt="icon" width="20%"></a>
+          <a  href= "Music.html"><img style="margin-bottom:3%" src="images/tree2s.png" alt="icon" width="20%"></a>
+          <a  href= "other.html"><img style="margin-bottom:6%" class="dimmed" src="images/tree3s.png" alt="icon" width="20%";></a>
           <center>
 
       </div>
