--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 
+  <!-- tensorflow js -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-converter@2.4.0/dist/tf-converter.min.js"></script> -->
+
+    <!-- p5 library import -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script> -->
+
+
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -44,6 +52,7 @@
 
 </head>
 <body>
+
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -62,15 +71,12 @@
     <div class="row" align="center" style="margin-top:5%;margin-bottom:0%;">
         <a id="link2" href= "index.html"><h3>MarkTension</h3></a>
     </div>
-
     
     <div class="twelve columns fade" style="margin-top: 5%">
-
-      <center><img style="margin-bottom:0%" src="images/tree1.png" alt="icon" width="20%">
-        <img style="margin-bottom:3%"  src="images/tree2.png" alt="icon" width="20%">
-        <img style="margin-bottom:6%" src="images/tree3.png" alt="icon" width="20%">
-        <center>
-
+      <center><img style="margin-bottom:0%" src="images/tree1s.png" alt="icon" width="20%">
+        <img style="margin-bottom:3%"  src="images/tree2s.png" alt="icon" width="20%">
+        <img style="margin-bottom:6%" src="images/tree3s.png" alt="icon" width="20%">
+      <center>
     </div>
 
 
@@ -120,6 +126,7 @@
 
 
   </div>
+  <script src="js/sketch.js"></script>
 
 
 <!-- End Document
