--- a/ML.html
+++ b/ML.html
@@ -50,7 +50,7 @@
 
     </div>
     <div class="row">
-      <div class="twelve columns fade" style="margin-top: 5%">
+      <div class="twelve columns" style="margin-top: 5%">
         <center>
           <a  href= "ML.html"><img style="margin-bottom:0%"  src="images/tree1s.png" alt="icon" width="20%" opacity="1"></a>
           <a  href= "Music.html"><img style="margin-bottom:3%" class="dimmed" src="images/tree2s.png" alt="icon" width="20%" opacity="0.5"></a>
@@ -64,11 +64,11 @@
     <!-- menu row  –––––––––––––––––––––––––  -->
      <div class="row" >
 
-        <div class="four columns fade" > <center> <a id="link" href= "ML.html"> <h4 style="margin-top:6%" >MachineLearning </h4> </a> </center>
+        <div class="four columns" > <center> <a id="link" href= "ML.html"> <h4 style="margin-top:6%" >MachineLearning </h4> </a> </center>
         </div>
-        <div class="four columns fade" > <center> <a id="link" href= "Music.html"> <h4 style="margin-top:3%">Music</h4> </a></center>
+        <div class="four columns" > <center> <a id="link" href= "Music.html"> <h4 style="margin-top:3%">Music</h4> </a></center>
         </div>
-        <div class="four columns fade" > <center> <a id="link" href="other.html"> <h4 style="margin-top:0%">Other</h4> </a></center>
+        <div class="four columns" > <center> <a id="link" href="other.html"> <h4 style="margin-top:0%">Other</h4> </a></center>
         </div>
       </div>
 
