--- a/Music.html
+++ b/Music.html
@@ -50,7 +50,7 @@
 
     </div>
     <div class="row">
-      <div class="twelve columns fade" style="margin-top: 5%">
+      <div class="twelve columns " style="margin-top: 5%">
         <center>
           <a  href= "ML.html"><img style="margin-bottom:0%" class="dimmed" src="images/tree1s.png" alt="icon" width="20%"></a>
           <a  href= "Music.html"><img style="margin-bottom:3%" src="images/tree2s.png" alt="icon" width="20%"></a>
@@ -65,17 +65,17 @@
      <div class="row" >
 
       <!-- photo  ––––––––––––––––––––––––– -->
-      <div class="four columns fade" > <center> <a id="link" href= "ML.html"> <h4 style="margin-top:6%" >MachineLearning </h4> </a> </center>
+      <div class="four columns " > <center> <a id="link" href= "ML.html"> <h4 style="margin-top:6%" >MachineLearning </h4> </a> </center>
       </div>
 
       <!-- word –––––––––––––––––––––-–––– -->
-      <div class="four columns fade" > <center> <a id="link" href= "Music.html"> <h4 style="margin-top:3%">Music</h4> </a></center>
+      <div class="four columns " > <center> <a id="link" href= "Music.html"> <h4 style="margin-top:3%">Music</h4> </a></center>
       </div>
       
-      <div class="four columns fade" > <center> <a id="link" href="other.html"> <h4 style="margin-top:0%">Other</h4> </a></center>
+      <div class="four columns " > <center> <a id="link" href="other.html"> <h4 style="margin-top:0%">Other</h4> </a></center>
       </div>
      </div>
-     <div class="twelve clumns fade" >
+     <div class="twelve clumns " >
       <center>
       <div class=" twelve columns" > 
         <h6 style="margin-top:0%;max-width:60%;text-align: left;">
@@ -117,7 +117,7 @@
      </div>
     </center>
 
-        <div class=" twelve columns fade" >
+        <div class=" twelve columns " >
       <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/811916800&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
       <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/773970745&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
 
