--- a/other.html
+++ b/other.html
@@ -50,7 +50,7 @@
 
     </div>
     <div class="row">
-      <div class="twelve columns fade" style="margin-top: 5%">
+      <div class="twelve columns " style="margin-top: 5%">
         <center>
           <a  href= "ML.html"><img style="margin-bottom:0%" class="dimmed" src="images/tree1s.png" alt="icon" width="20%"></a>
           <a  href= "Music.html"><img style="margin-bottom:3%" class="dimmed" src="images/tree2s.png" alt="icon" width="20%"></a>
@@ -65,23 +65,23 @@
      <div class="row" >
 
       <!-- photo  ––––––––––––––––––––––––– -->
-      <div class="four columns fade" > <center> <a id="link" href= "ML.html"> <h4 style="margin-top:6%" >MachineLearning </h4> </a> </center>
+      <div class="four columns " > <center> <a id="link" href= "ML.html"> <h4 style="margin-top:6%" >MachineLearning </h4> </a> </center>
       </div>
 
     <!-- word –––––––––––––––––––––-–––– -->
-    <div class="four columns fade" > <center> <a id="link" href= "Music.html"> <h4 style="margin-top:3%">Music</h4> </a></center>
+    <div class="four columns " > <center> <a id="link" href= "Music.html"> <h4 style="margin-top:3%">Music</h4> </a></center>
     </div>
 
-    <div class="four columns fade" >   <center> <a id="link" href="other.html"> <h4 style="margin-top:0%">Other</h4> </a></center>
+    <div class="four columns " >   <center> <a id="link" href="other.html"> <h4 style="margin-top:0%">Other</h4> </a></center>
       </div>
 
 
-    <div class=" twelve columns fade" > <center>
+    <div class=" twelve columns " > <center>
       <h6 style="margin-top:0%;max-width:60%;">This is a first step in giving live visuals to my music via a MIDI bridge between ableton Live and Unity3D.
         I've used the Unity MidiKlak package to make the bridge possible, and outputted ableton's midi as an external instrument into the midi driver.
       </h6></center>
     </div>
-    <div class=" twelve columns fade" > <center>
+    <div class=" twelve columns " > <center>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/QgcP1_fxNBI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    </center>
     </div>
 
