better photos web

--- a/ML.html
+++ b/ML.html
@@ -52,9 +52,9 @@
     <div class="row">
       <div class="twelve columns" style="margin-top: 5%">
         <center>
-          <a  href= "ML.html"><img style="margin-bottom:0%"  src="images/tree1s.png" alt="icon" width="20%" opacity="1"></a>
-          <a  href= "Music.html"><img style="margin-bottom:3%" class="dimmed" src="images/tree2s.png" alt="icon" width="20%" opacity="0.5"></a>
-          <a  href= "other.html"><img style="margin-bottom:6%"  class="dimmed" src="images/tree3s.png" alt="icon" width="20%";></a>
+          <a  href= "ML.html"><img style="margin-bottom:0%"  src="images/ML/clayBasic1.png" alt="icon" width="20%" opacity="1"></a>
+          <a  href= "Music.html"><img style="margin-bottom:3%" class="dimmed" src="images/ML/clayBasic2.png" alt="icon" width="20%" opacity="0.5"></a>
+          <a  href= "other.html"><img style="margin-bottom:6%"  class="dimmed" src="images/ML/clayBasic3.png" alt="icon" width="20%";></a>
           <center>
 
       </div>
@@ -75,7 +75,36 @@
     <!-- body content  –––––––––––––––––––––––––  -->
 
       <div class=" twelve columns" style="padding-left: 5%;padding-right:5%">
+        <hr>
+
         <div class=" twelve columns" align="left" >
+          <h5 class="blogTitle" > 2D & 3D AI sculpting with Unity </h5>
+          <h6 style="margin-top:0%;align-content:justify;">
+            As an ML-researcher/artist at Onformative, Berlin, I'm working on a 3D digital sculpting project in Unity3D.
+            We're using reinforcement learning, enabled in <a href="https://unity.com/">Unity3D</a> via its <a href="https://github.com/Unity-Technologies/ml-agents">ml-agents</a>  machine learning library, to train our sculpting agent to creatively sculpt complex shapes from a block.
+            The agent uses a combination of engineered sensors and visual input to get a good idea of the partially observable environment.
+            The final version will have the agent using different tool shapes which will result in different aesthetics.
+          </h6>
+
+        <div class="twelve columns" style="margin-bottom:0%">    <center>
+          <div class="four columns" style="margin-bottom:0%">            <img style="margin-top:0%"  src="images/ML/clayBasic1.png" width="100%" alt="hello">
+          </div>
+          <div class="four columns" style="margin-bottom:0%">            <img style="margin-top:0%"  src="images/ML/clayBasic2.png" width="100%" alt="hello">
+          </div>
+          <div class="four columns" style="margin-bottom:0%">            <img style="margin-top:0%"  src="images/ML/clayBasic3.png" width="100%" alt="hello">
+          </div>
+
+          <!-- <img style="margin-top:0%" height="200"   src="images/ML/handFastGif.gif" width="30%" alt="hello">
+          <iframe width="30%" height="200"  src="https://www.youtube.com/embed/vJuxmydJQP4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="30%" height="200" src="https://www.youtube.com/embed/h7aKyZKOP04" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>       -->
+          <iframe width="50%" height="400" src="https://www.youtube.com/embed/QYWhmFz4uPM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </center> </div>
+
+
+
+        <div class=" twelve columns" align="left" >
+          <hr>
+
             <h5 class="blogTitle" > Synchronization in dynamical systems: Fireflies </h5>
             <h6 style="margin-top:0%;align-content:justify;">
               A long-term goal is having a music code library/toolkit containing algorithms that simulate complex systems. 
@@ -114,27 +143,7 @@
 
           </div>
           
-          <div class=" twelve columns" align="left" >
-            <hr>
-            <h5 class="blogTitle" > 2D & 3D sculpting with Unity </h5>
-            <h6 style="margin-top:0%;align-content:justify;">
-              As an ML-researcher/artist at Onformative, Berlin, I'm working on a 3D digital sculpting project in Unity3D.
-              We're using reinforcement learning, enabled in <a href="https://unity.com/">Unity3D</a> via its <a href="https://github.com/Unity-Technologies/ml-agents">ml-agents</a>  machine learning library, to train our sculpting agent to creatively sculpt complex shapes from a block.
-              The agent uses a combination of engineered sensors and visual input to get a good idea of the partially observable environment.
-              The final version will have the agent using different tool shapes which will result in different aesthetics.
-            </h6>
-
-          <div class="twelve columns" style="margin-bottom:0%">    <center>
-            <div class="six columns" style="margin-bottom:0%">            <img style="margin-top:0%"  src="images/ML/clayBasic1.png" width="100%" alt="hello">
-            </div>
-            <div class="six columns" style="margin-bottom:0%">            <img style="margin-top:0%"  src="images/ML/clayBasic2.png" width="100%" alt="hello">
-            </div>
-
-            <!-- <img style="margin-top:0%" height="200"   src="images/ML/handFastGif.gif" width="30%" alt="hello">
-            <iframe width="30%" height="200"  src="https://www.youtube.com/embed/vJuxmydJQP4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="30%" height="200" src="https://www.youtube.com/embed/h7aKyZKOP04" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>       -->
-            <iframe width="80%" height="800" src="https://www.youtube.com/embed/QYWhmFz4uPM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </center> </div>
+          
 
         <div class=" twelve columns" >
           <hr>
