--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
     </div>
     
     <div class="twelve columns fade" style="margin-top: 5%">
-      <center><img style="margin-bottom:0%" src="images/tree1s.png" alt="icon" width="20%">
-        <img style="margin-bottom:3%"  src="images/tree2s.png" alt="icon" width="20%">
-        <img style="margin-bottom:6%" src="images/tree3s.png" alt="icon" width="20%">
+      <center><img style="margin-bottom:0%" src="images/ML/clayBasic1.png" alt="icon" width="20%">
+        <img style="margin-bottom:3%"  src="images/ML/clayBasic2.png" alt="icon" width="20%">
+        <img style="margin-bottom:6%" src="images/ML/clayBasic3.png" alt="icon" width="20%">
       <center>
     </div>
 
