--- a/other.html
+++ b/other.html
@@ -52,9 +52,9 @@
     <div class="row">
       <div class="twelve columns " style="margin-top: 5%">
         <center>
-          <a  href= "ML.html"><img style="margin-bottom:0%" class="dimmed" src="images/tree1s.png" alt="icon" width="20%"></a>
-          <a  href= "Music.html"><img style="margin-bottom:3%" class="dimmed" src="images/tree2s.png" alt="icon" width="20%"></a>
-          <a  href= "other.html"><img style="margin-bottom:6%"  src="images/tree3s.png" alt="icon" width="20%";></a>
+          <a  href= "ML.html"><img style="margin-bottom:0%" class="dimmed" src="images/ML/clayBasic1.png" alt="icon" width="20%"></a>
+          <a  href= "Music.html"><img style="margin-bottom:3%" class="dimmed" src="images/ML/clayBasic2.png" alt="icon" width="20%"></a>
+          <a  href= "other.html"><img style="margin-bottom:6%"  src="images/ML/clayBasic3.png" alt="icon" width="20%";></a>
           <center>
 
       </div>
