--- a/Music.html
+++ b/Music.html
@@ -75,6 +75,11 @@
       <div class="four columns " > <center> <a id="link" href="other.html"> <h4 style="margin-top:0%">Other</h4> </a></center>
       </div>
      </div>
+    </center>
+
+    <div class=" twelve columns " >
+      <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/904385893%3Fsecret_token%3Ds-4cj8f4FbTkd&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/schmark-3" title="Schmark" target="_blank" style="color: #cccccc; text-decoration: none;">Schmark</a> · <a href="https://soundcloud.com/schmark-3/walk14/s-4cj8f4FbTkd" title="Walk14" target="_blank" style="color: #cccccc; text-decoration: none;">Walk14</a></div>
+</center>
      <div class="twelve clumns " >
       <center>
       <div class=" twelve columns" > 
@@ -115,13 +120,7 @@
       
         <img style="margin-bottom:2%;align-content: left;"  src="images/Music/tensenParkCover.png" alt="springwalk" width="50%">
      </div>
-    </center>
-
-        <div class=" twelve columns " >
-      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/811916800&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
-      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/773970745&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
-
-    </center>
+    
     </div>
 
 
