--- a/ML.html
+++ b/ML.html
@@ -86,20 +86,21 @@
             The final version will have the agent using different tool shapes which will result in different aesthetics.
           </h6>
 
-        <div class="twelve columns" style="margin-bottom:0%">    <center>
+        <div class="twelve columns" style="margin-bottom:3%">    <center>
           <div class="four columns" style="margin-bottom:0%">            <img style="margin-top:0%"  src="images/ML/clayBasic1.png" width="100%" alt="hello">
           </div>
           <div class="four columns" style="margin-bottom:0%">            <img style="margin-top:0%"  src="images/ML/clayBasic2.png" width="100%" alt="hello">
           </div>
           <div class="four columns" style="margin-bottom:0%">            <img style="margin-top:0%"  src="images/ML/clayBasic3.png" width="100%" alt="hello">
           </div>
-
+        </div></center>
           <!-- <img style="margin-top:0%" height="200"   src="images/ML/handFastGif.gif" width="30%" alt="hello">
           <iframe width="30%" height="200"  src="https://www.youtube.com/embed/vJuxmydJQP4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <iframe width="30%" height="200" src="https://www.youtube.com/embed/h7aKyZKOP04" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>       -->
-          <iframe width="50%" height="400" src="https://www.youtube.com/embed/QYWhmFz4uPM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </center> </div>
-
+        <div class="twelve columns" style="margin-bottom:0%">
+          <iframe width="45%" height="400" src="https://www.youtube.com/embed/QYWhmFz4uPM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="50%" style="margin-left:3%; float:right;" height="400" src="https://www.youtube.com/embed/fxNcrov7h4s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+        </div>
 
 
         <div class=" twelve columns" align="left" >
