--- a/Music.html
+++ b/Music.html
@@ -86,11 +86,11 @@
       <center>
       <div class=" twelve columns" > 
         <h6 style="margin-top:0%;max-width:60%;text-align: left;">
-        For my music compositions that will be released under the alias <turqoise>Tensen Park</turqoise>, I'm trying to explore a new balance between chaos and order. 
-        
-        To get a satisfactory balance in this, I'm using machine learning and nature-inspired generative approaches. 
-        An album's worth of material is composed and ready, and is currently getting mixed and mastered for publication in the near future.
-          Here follow some ideas central to the project.
+        For my music compositions are released as <turqoise>Tensen Park</turqoise>. I'm explore a balance between chaos and order using computational/ai methods and old analog equipment. 
+                  
+        For my music endeavors, please visit my label <a href="https://gardenwalkrecords.nl">Garden Walk Records</a>.
+
+        Here follow some ideas central to the project.
       </br></br>
         <i>
           <turqoise>0</turqoise> <br>
