--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </br></br>
         Central to this approach is the application of mathematical models approximating biological systems, and machine learning methods.
         </br></br>
-        The eventual goal is enriching our digital lives with nature's complexity, and criticality.
+        For my music endeavors, please visit my label <a href="https://gardenwalkrecords.nl">Garden Walk Records</a>.
       </h5></center>
     </div>
 
